2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add Ogg-related MIME types:
	"audio/x-vorbis", "audio/x-oggflac", "audio/x-speex", "video/x-theora"
	and "video/x-ogm". Make them subtypes of "application/ogg".
	Fixes #1002.

2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Make "application/x-mozilla-bookmarks"
	subtype of "text/html". Fixes #3169. Thanks to Reinout van Schouwen.

2005-12-01  Matthias Clasen  <mclasen@redhat.com>

	* shared-mime-info-spec.xml: Add acronym and expanded-acronym
	elements, add recommendations for handling duplicate globs.
	Specify how duplicate globs are stored in mime.cache.

	* update-mime-database.c (process_freedesktop_node): Allow 
	identical globs.
	(insert_suffix): Store duplicate globs in the suffix tree
	by using '\0' as a key.

2005-12-01  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Rename "text/xml" to "application/xml", make
	the former an alias. Improve SVG, TIFF and JNG comments.
	Thanks to Eric van der Vlist.

2005-11-16  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Rename "application/x-troff" to
	"text/troff", make the latter an alias, also add "text/x-troff" alias.
	Fixes #5072. Thanks to Tristan Miller.

2005-11-14  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add Mup MIME type ("text/x-mup"). Fixes
	#2531. Thanks to Abel Cheung.

2005-11-01  Bastien Nocera  <hadess@hadess.net>

	* README: Fix the URLs to point to the right specs, pointed out
	by Tommi Vainikainen <thv@iki.fi> (Closes: #4041)

2005-11-01  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.svgz as a glob for SVG files, from
	Luca Ferretti <elle.uca@libero.it> (Closes: #4836)
	* config.h.in: removed, it is a generated file

2005-10-30  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: split SQLite MIME type into two. Thanks to
	Jarosław Staniek. Fixes #3178.
