@@ -1,3 +1,8 @@
+2005-12-02  Christian Neumair  <chris@gnome-de.org>
+
+	* freedesktop.org.xml.in: Modify Ogg-related MIME types to match the
+	XML naming pattern. Thanks to Peter Bowen.
+
 2005-12-01  Christian Neumair  <chris@gnome-de.org>
 
 	* freedesktop.org.xml.in: Add Ogg-related MIME types:
